change selector "header" to .nav-collapse__wrapper for fixedResponsiveNav

--- a/source/components/components-libs/fixedResponsiveNav/css/fixed-nav-styles.css
+++ b/source/components/components-libs/fixedResponsiveNav/css/fixed-nav-styles.css
@@ -77,7 +77,7 @@ a:hover {
 	user-select: none;
 }
 
-@media screen and (min-width: 40em) {
+@media screen and (min-width: 768px) {
 	.js .nav-collapse {
 		position: relative;
 	}
@@ -93,7 +93,7 @@ a:hover {
 /* ------------------------------------------
   DEMO STYLES
 --------------------------------------------- */
-
+/*
 body {
 	-webkit-text-size-adjust: 100%;
 	-ms-text-size-adjust: 100%;
@@ -119,20 +119,31 @@ p {
 	width: 90%;
 	margin: 0 auto;
 }
-
+*/
 
 /* ------------------------------------------
   FIXED HEADER
 --------------------------------------------- */
 
-header {
-	background: #f4421a;
-	position: fixed;
-	z-index: 3;
-	width: 100%;
-	left: 0;
-	top: 0;
+.nav-collapse__wrapper {
+	/*background: #f4421a;*/
+	/*position: fixed;*/
+	/*z-index: 3;*/
+	/*width: 100%;*/
+	/*left: 0;*/
+	/*top: 0;*/
 }
+
+@media screen and (min-width: 768px) {
+	.nav-collapse__wrapper {
+		position: fixed;
+		z-index: 3;
+		width: 100%;
+		left: 0;
+		top: 0;
+	}
+}
+
 
 .logo {
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
@@ -174,7 +185,7 @@ header {
 	opacity: 1;
 }
 
-@media screen and (min-width: 40em) {
+@media screen and (min-width: 768px) {
 	.mask {
 		display: none !important;
 		opacity: 0 !important;
@@ -207,7 +218,7 @@ header {
 	float: left;
 }
 
-@media screen and (min-width: 40em) {
+@media screen and (min-width: 768px) {
 	.nav-collapse {
 		float: right;
 		width: auto;
@@ -219,7 +230,7 @@ header {
 	width: 100%;
 }
 
-@media screen and (min-width: 40em) {
+@media screen and (min-width: 768px) {
 	.nav-collapse li {
 		width: auto;
 	}
@@ -229,7 +240,7 @@ header {
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
 	border-top: 1px solid white;
 	text-decoration: none;
-	background: #f4421a;
+	/*background: #f4421a;*/
 	padding: 0.7em 1em;
 	color: #fff;
 	width: 100%;
@@ -241,7 +252,7 @@ header {
 	background: #b73214;
 }
 
-@media screen and (min-width: 40em) {
+@media screen and (min-width: 768px) {
 	.nav-collapse a {
 		border-left: 1px solid white;
 		padding: 1.02em 2em;
@@ -257,7 +268,7 @@ header {
 	padding-left: 2em;
 }
 
-@media screen and (min-width: 40em) {
+@media screen and (min-width: 768px) {
 	.nav-collapse ul ul a {
 		display: none;
 	}
